--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -17,8 +17,8 @@
 
             <SurfaceView
                 android:id="@+id/Sur_Player"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/btn_ParamCfg"
                 android:layout_alignParentLeft="true"
                  />
